# Study_OpenCV

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/swan/study_opencv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Log.cpp  img_face_check.cpp  img_mix.cpp  img_operate.cpp  img_wx_qr_code.cpp  img_zft.cpp  mat_test.cpp  native-imgproc.cpp  native-lib.cpp  native-mat.cpp  native-sdk.cpp  native-transform.cpp  native-utils.cpp  writeSd.cpp
app/src/main/cpp/util/: BitmapMatUtils.cpp  BitmapMatUtils.h  BitmapUtil.cpp  BitmapUtil.h
app/src/main/java/com/swan/opencv2/: CVType.java  Imgproc.java  Mat.java  Utils.java
app/src/main/java/com/swan/study_opencv/: BitmapUtils.java  MainActivity.java  NDKBitmapUtils.java  OpenCVUtils.java  Plugin.java  SdkUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/swan/study_opencv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
